chore: modernize repo and add github ci

--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "description": "Advent of Code 2018",
   "main": "index.js",
-  "author": "Mario Tacke <tacke.mario@gmail.com>",
+  "author": "Mario Tacke <tacke.mario@gmail.com> (https://www.mariotacke.io)",
   "license": "MIT",
   "scripts": {
     "test": "mocha day-*/**/test.js",
     "lint": "eslint ."
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mariotacke/advent-of-code-2018.git"
+  },
   "devDependencies": {
-    "eslint": "^5.9.0",
-    "mocha": "^5.2.0"
+    "eslint": "^6.6.0",
+    "mocha": "^6.2.2"
   }
 }
